--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="ad-footer">
+<footer  class="ad-footer d-none">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start">
