--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm">
   <div class="container-fluid navbar-container">
     <a class="navbar-brand d-flex align-items-center h-100" href="#">
-      <img src="assets/images/logo.png" alt="Naqi Logo" class="navbar-logo me-2 mh-100" />
+      <img src="assets/images/logo.png" alt="Naqi Logo" class="navbar-logo me-2 mh-100 rounded-pill" />
     </a>
     
     <!-- Contact Number - Responsive Version -->
