--- a/src/app/personal-finance/personal-finance.component.html
+++ b/src/app/personal-finance/personal-finance.component.html
@@ -47,7 +47,12 @@
                             <mat-card-title>تمويل السعوديين والمقيمين</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
-                            <p>مرونة في المبالغ المالية حسب احتياجاتك</p>
+                            <p>
+                                راتب يبدأ من ٥٠٠٠ للسعودى قطاع حكومى
+راتب يبدأ من ٦٠٠٠ للسعودى قطاع خاص
+راتب يبدأ من ١٠٠٠٠ للمقيم
+مرونة فى المبالغ المالية حسب احتياجاتك
+                            </p>
                         </mat-card-content>
                     </mat-card>
                 </div>
@@ -75,7 +80,10 @@
                             <mat-card-title>العمر 20-60 سنة (والمتقاعدين حتى 71 سنة)</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
-                            <p>شروط مرنة تناسب مختلف الفئات العمرية</p>
+                            <p>
+                                شروط مرنة تناسب مختلف الفئات العمرية 
+المتقاعدين راتب يبدأ من ١٩٨٥
+                            </p>
                         </mat-card-content>
                     </mat-card>
                 </div>
