--- a/src/app/personal-finance/personal-finance.component.html
+++ b/src/app/personal-finance/personal-finance.component.html
@@ -46,13 +46,19 @@
                             </div>
                             <mat-card-title>تمويل السعوديين والمقيمين</mat-card-title>
                         </mat-card-header>
-                        <mat-card-content>
-                            <p>
-                                راتب يبدأ من ٥٠٠٠ للسعودى قطاع حكومى
-راتب يبدأ من ٦٠٠٠ للسعودى قطاع خاص
-راتب يبدأ من ١٠٠٠٠ للمقيم
-مرونة فى المبالغ المالية حسب احتياجاتك
-                            </p>
+                       <mat-card-content>
+                            <ul class="benefits-list">
+                                <li>راتب يبدأ من ٥٠٠٠ ريال للسعوديين في القطاع الحكومي</li>
+                                <li>راتب يبدأ من ٦٠٠٠ ريال للسعوديين في القطاع الخاص</li>
+                                <li>راتب يبدأ من ١٠٠٠٠ ريال للمقيمين</li>
+                            </ul>
+                            
+                            <div class="highlight">
+                                <p>
+                                    <mat-icon>info</mat-icon>
+                                    مرونة في المبالغ المالية حسب احتياجاتك
+                                </p>
+                            </div>
                         </mat-card-content>
                     </mat-card>
                 </div>
