--- a/src/app/personal-finance/personal-finance.component.html
+++ b/src/app/personal-finance/personal-finance.component.html
@@ -86,9 +86,18 @@
                             <mat-card-title>العمر 20-60 سنة (والمتقاعدين حتى 71 سنة)</mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
-                            <p>
-                                شروط مرنة تناسب مختلف الفئات العمرية 
+                              <ul class="benefits-list">
+                              
+                                <li>
+                                    شروط مرنة تناسب مختلف الفئات العمرية 
+                                </li>
+                                <li>
 المتقاعدين راتب يبدأ من ١٩٨٥
+
+                                </li>
+                            </ul>
+                            <p>
+                                
                             </p>
                         </mat-card-content>
                     </mat-card>
