--- a/src/app/personal-finance/personal-finance.component.html
+++ b/src/app/personal-finance/personal-finance.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid px-0 finance-container mt-3" dir="rtl">
     <!-- Hero Banner with Image Only -->
     <div class="hero-banner">
-        <img src="assets/images/Tamwel.png" alt="التمويل الشخصي من شركة النايفات" class="hero-image" loading="lazy">
+        <img src="assets/images/Tamwel.png" alt="التمويل الشخصي من شركة" class="hero-image" loading="lazy">
     </div>
     
     <!-- Hero Content Below Image -->
     <div class="hero-content-below">
         <h1 class="hero-title animate__animated animate__fadeInUp">التمويل الشخصي</h1>
         <p class="hero-text animate__animated animate__fadeInUp animate__delay-1s">
-            تقدم شركة النايفات للتمويل حلول تمويل شخصي متوافقة مع الشريعة الإسلامية للسعوديين والمقيمين، مع إجراءات
+            تقدم الشركة  للتمويل حلول تمويل شخصي متوافقة مع الشريعة الإسلامية للسعوديين والمقيمين، مع إجراءات
             مرنة وسريعة وإمكانية إعادة التمويل عند الحاجة.
         </p>
     </div>
