--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer  class="ad-footer d-none">
+<footer  class="ad-footer">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start">
@@ -6,8 +6,8 @@
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <div class="ad-contact">
-<i class="bi bi-phone"></i>
-                    <a href="tel:+966598505540" class="phone-link">0598505540</a>
+  <i class="bi bi-phone"></i>
+                    <a href="tel:+966598505540" class="phone-link">598505540</a>
                 </div>
             </div>
         </div>
